<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>metamorphosis</groupId>
	<artifactId>metamorphosis</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<repositories>
		<repository>
			<id>eclipse</id>
			<name>Project Repository - Eclipse</name>
			<url>https://repo.eclipse.org/content/groups/eclipse</url>
		</repository>
		<repository>
			<id>clojars.org</id>
			<url>http://clojars.org/repo</url>
		</repository>
		<repository>
			<id>twitter4j</id>
			<url>http://twitter4j.org/maven2</url>
		</repository>
		<repository>
			<id>central</id>
			<name>Maven Central</name>
			<url>http://repo1.maven.org/maven2</url>
		</repository>
		<repository>
			<id>github.release.repo</id>
			<url>https://raw.github.com/bulldog2011/bulldog-repo/master/repo/releases/</url>
		</repository>

		<repository>
			<id>repo</id>
			<url>file://${project.basedir}/repo</url>
		</repository>

	</repositories>
	<dependencies>

		<dependency>
			<groupId>org.eclipse.jdt</groupId>
			<artifactId>org.eclipse.jdt.annotation</artifactId>
			<version>1.1.0.v20140129-1625</version>
			<scope></scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
		</dependency>
		
		
    <dependency>
      <groupId>org.apache.kafka</groupId>
      <artifactId>kafka_2.9.2</artifactId>
      <version>0.8.1.1</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.kafka</groupId>
      <artifactId>kafka_2.9.2</artifactId>
      <version>0.8.1.1</version>
      <scope>compile</scope>
      <classifier>test</classifier>
    </dependency>

		
	</dependencies>

	
  <build>

    <resources>
      <resource>
        <directory>resources/</directory>
      </resource>
    </resources>

    <testSourceDirectory>src/</testSourceDirectory>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <compilerId>eclipse</compilerId>
          <source>1.7</source>
          <target>1.7</target>
          <optimize>true</optimize>
          <compilerArgument>-err:nullAnnot,null</compilerArgument>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.codehaus.plexus</groupId>
            <artifactId>plexus-compiler-eclipse</artifactId>
            <version>2.3</version>
          </dependency>
        </dependencies>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>1.2.1</version>
        <executions>
          <execution>
            <goals>
              <goal>exec</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <mainClass>grandmotherbrain.top.TopServiceServer</mainClass>
          <arguments>
          </arguments>
        </configuration>
      </plugin>



      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
          <dependencySets>
            <dependencySet>
              <excludes>
                <exclude>storm:storm</exclude>
              </excludes>
            </dependencySet>
          </dependencySets>
          <archive>
            <manifest>
              <mainClass>topology.Main</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
    </plugins>
    <sourceDirectory>src</sourceDirectory>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.17</version>
          <configuration>
            <forkCount>${fork}</forkCount>
            <reuseForks>false</reuseForks>
            <forkedProcessTimeoutInSeconds>1200</forkedProcessTimeoutInSeconds>
            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
            <systemPropertyVariables>
              <isForkTest>1</isForkTest>
              <!-- <databaseSchema>MY_TEST_SCHEMA_${surefire.forkNumber}</databaseSchema> -->
            </systemPropertyVariables>
            <includes>
              <include>**/*Test*.java</include>
            </includes>
          </configuration>
        </plugin>

        <!--This plugin's configuration is used to store Eclipse m2e settings 
          only. It has no influence on the Maven build itself. -->
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>
                      org.apache.maven.plugins
                    </groupId>
                    <artifactId>
                      maven-compiler-plugin
                    </artifactId>
                    <versionRange>[3.1,)</versionRange>
                    <goals>
                      <goal>compile</goal>
                      <goal>testCompile</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore></ignore>
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>